crates/toml/tests/snapshots/invalid/key/special-character.stderr
TOML parse error at line 1, column 1
  |
1 | μ = "greek small letter mu"
  | ^
invalid unquoted key, expected letters, numbers, `-`, `_`

---
TOML parse error at line 1, column 1
  |
1 | μ = "greek small letter mu"
  | ^
invalid unquoted key, expected letters, numbers, `-`, `_`
